...
                                    val result = viewModel.emailLogin(emailText, passwordText).first()
                                    if (result.isSuccess) {
                                        Log.d("Login", "Successful login")
                                        navController.navigate(Screen.MainScreen.route)
                                    } else {
                                        Log.d("Login", "Login failed")
                                        snackbarHostState.showSnackbar("Email login failed")
                                    }
                                } catch (e: Exception) {
                                    Log.e("LoginError", "Error logging in", e)
                                    snackbarHostState.showSnackbar("Login error: ${e.message}")
                                }
                            }
...
